edited by kirti

--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -316,9 +316,9 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentBottom="true"
                         android:layout_weight="0.8"
+                        android:inputType="number"
                         android:background="@null"
-                        android:focusable="false"
-                        android:hint="Enter E-Gift Code"
+                        android:hint="Enter Amount"
                         android:padding="@dimen/_5sdp"
                         android:textColor="@color/black"
                         app:edittextfont="Raleway-Regular.ttf" />
@@ -348,7 +348,43 @@
                         android:visibility="gone"
                         app:edittextfont="@string/raleway_regular" />
                 </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/llegiftbal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_23sdp"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:visibility="gone">
 
+                    <com.yberry.dinehawaii.customview.CustomTextView
+                        style="@style/TextAppearance.AppCompat.Notification.Time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="("
+                        app:edittextfont="@string/raleway_bold" />
+
+                    <com.yberry.dinehawaii.customview.CustomTextView
+                        style="@style/TextAppearance.AppCompat.Notification.Time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Total E-Gift Balance : $"
+                        app:edittextfont="@string/raleway_bold" />
+
+                    <com.yberry.dinehawaii.customview.CustomTextView
+                        android:id="@+id/tvegiftBal"
+                        style="@style/TextAppearance.AppCompat.Notification.Time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        app:edittextfont="@string/raleway_bold" />
+
+                    <com.yberry.dinehawaii.customview.CustomTextView
+                        style="@style/TextAppearance.AppCompat.Notification.Time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=")"
+                        app:edittextfont="@string/raleway_bold" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/relcoupon"
