--- a/app/src/main/res/layout/vendor_activity_cart_bid.xml
+++ b/app/src/main/res/layout/vendor_activity_cart_bid.xml
@@ -41,18 +41,16 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorDivider"
-                android:orientation="horizontal"
-                android:weightSum="1">
+                android:background="#f2f2f2"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
+                    android:layout_weight="0.3"
                     android:orientation="vertical">
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -60,7 +58,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/_5sdp"
-                        android:text="Items"
+                        android:text="Vendor Name"
                         app:edittextfont="@string/raleway_bold" />
                 </LinearLayout>
 
@@ -74,6 +72,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.2"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -82,22 +81,18 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:padding="@dimen/_5sdp"
-                        android:text="Vendor Quote"
+                        android:text="Vendor Quote / Unit"
                         app:edittextfont="@string/raleway_bold" />
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorDivider" />
-
 
                 <LinearLayout
                     android:layout_width="0dp"
+                    android:visibility="gone"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.2"
-                    android:gravity="right"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -108,30 +103,8 @@
                         android:text="Item Total"
                         app:edittextfont="@string/raleway_bold" />
                 </LinearLayout>
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorDivider" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
-                    android:orientation="horizontal">
-
-                    <com.yberry.dinehawaii.customview.CustomTextView
-                        style="@style/TextAppearance.AppCompat.Small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="@dimen/_5sdp"
-                        android:text="Offered Price"
-                        app:edittextfont="@string/raleway_bold" />
-
-                </LinearLayout>
 
             </LinearLayout>
-
 
             <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
