--- a/app/src/main/res/layout/vendor_activity_cart_bid.xml
+++ b/app/src/main/res/layout/vendor_activity_cart_bid.xml
@@ -129,61 +129,16 @@
         android:id="@+id/mainView2"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/green">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:visibility="gone"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <com.yberry.dinehawaii.customview.CustomTextView
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Total: $"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white"
-                    app:edittextfont="Raleway-Bold.ttf" />
-
-                <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/total_amount"
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:text="00"
-                    android:textColor="@color/white"
-                    app:edittextfont="Raleway-Bold.ttf" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="1dp"
-                android:visibility="gone"
-                android:layout_height="match_parent"
-                android:background="@color/white"></View>
-
-
+        android:layout_alignParentBottom="true">
             <com.yberry.dinehawaii.customview.CustomButton
                 android:id="@+id/btnPlaceBid"
                 style="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:background="@null"
+                android:background="@color/green"
+                android:layout_alignParentBottom="true"
                 android:text="Place Bid"
                 android:textColor="@color/white"
                 app:edittextfont="Raleway-Bold.ttf" />
-
-        </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
