--- a/app/src/main/res/layout/update_bid_dialog.xml
+++ b/app/src/main/res/layout/update_bid_dialog.xml
@@ -127,6 +127,7 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_weight="0.2"
                     android:orientation="horizontal">
 
@@ -269,6 +270,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.2"
+                android:visibility="gone"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingBottom="@dimen/_3sdp"
