--- a/app/src/main/res/layout/vendor_bid_item_detail_layout.xml
+++ b/app/src/main/res/layout/vendor_bid_item_detail_layout.xml
@@ -38,7 +38,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/incQuanLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -113,7 +112,7 @@
                 app:edittextfont="Raleway-Regular.ttf" />
         </LinearLayout>
         <LinearLayout
-
+            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.2"
